<resources>
    <string name="app_name">Hour of Regex</string>

    <!-- Home Screen -->
    <string name="title_string">Hour of \n^/Regex/$</string>
    <string name="subtitle_string">Learn Regex in an hour or less.</string>
    <string name="button_start">Get Started</string>
    <string name="button_tester">Expression Tester</string>
    <string name="home">Home</string>

    <!-- Teach Activity -->
    <string name="button_next">Next</string>
    <string name="title_activity_teach">Learn Regex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Exercise Fragment -->
    <string name="regex_input_hint">Enter Regex here</string>
    <string name="bad_syntax">The expression entered is invalid.</string>
    <string name="bad_brackets">Make sure your opening and closing
        brackets are balanced!</string>
    <string name="bad_case">Careful, regex is case-sensitive!</string>
    <string name="button_enter">Enter</string>

    <!-- Menu -->
    <string name="menu_title">Lessons</string>
    <string name="menu_subtitle">Step by step explanations of Regex
        syntax</string>

    <!-- Completion Activity -->
    <string name="title_activity_completion"></string>
    <string name="congratulations">Congratulations!</string>
    <string name="completion_subtitle">You\'ve learned basic regex. Stay tuned
        for future updates to delve into deeper regex features (backreferences,
        escape characters, etc.)</string>
    <string name="further_learning">If you want to learn more, look around on
        the web. There are plenty of free resources available.\nSome of our
        favourites are:</string>
    <string name="further_link1">https://www.hackerrank.com/domains/regex/
        re-introduction</string>
    <string name="further_link2">https://regex101.com/</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
