<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnHome"
        android:elevation="3dp"
        android:background="#7CB342"
        android:text="@string/home"
        android:layout_gravity="bottom|start"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/congratulations"
        android:text="@string/congratulations"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/completion_subtitle"
        android:text="@string/completion_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:padding="25dp"
        android:textAlignment="center"
        android:layout_below="@+id/congratulations"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>