<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_final"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_string"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textAlignment="center"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_string"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/button_get_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_start"
                android:textColor="@color/green"
                android:background="@color/landing_button_background"
                android:padding="15dp"
                android:layout_margin="5dp"
                android:onClick="startTeachActivity"/>

            <!--<Button-->
                <!--android:id="@+id/button_expression_tester"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/button_tester"-->
                <!--android:textColor="@color/blue"-->
                <!--android:background="@color/landing_button_background"-->
                <!--android:padding="15dp"-->
                <!--android:layout_margin="5dp"-->
                <!--android:onClick="startExpressionTestActivity"/>-->

        </LinearLayout>
    </FrameLayout>

</LinearLayout>